--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,19 +16,6 @@ jobs:
           root: ./
           paths:
             - .
-  build:
-    docker:
-      - image: cimg/node:14.17.6
-    steps:
-      - attach_workspace:
-          at: ./
-      - run:
-          name: Build
-          command: npm run only:build
-      - persist_to_workspace:
-          root: ./
-          paths:
-            - dist
   lint:
     docker:
       - image: cimg/node:14.17.6
@@ -74,10 +61,9 @@ jobs:
       - sixrs-gke/npm-public-publish
 workflows:
   version: 2
-  build-test-deploy:
+  test-deploy:
     jobs:
       - setup
-      - build:
           context: 6rs-public-npm
           requires:
             - setup
@@ -87,13 +73,10 @@ workflows:
             - setup
       - test:
           context: 6rs-public-npm
-          requires:
-            - build
       - publish:
           context: 6rs-public-npm
           requires:
             - setup
-            - build
             - lint
             - test
           filters:
