--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@6river/openapi-schema-to-json-schema",
+  "private": false,
   "version": "0.0.0-development",
   "description": "Converts OpenAPI Schema Object to JSON Schema",
   "main": "index.js",
